# killer

./: .gitignore  .gitleaksignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  deny.toml
.github/: CODEOWNERS  dependabot.yml  labeler.yml  (+2 more)
libs/common/domain-primitives/: Cargo.toml  README.md
libs/common/domain-primitives/src/: account_code.rs  audit_info.rs  company_code.rs  cost_center.rs  currency_code.rs  document_number.rs  error.rs  fiscal_period.rs  lib.rs  material_number.rs  money.rs  percentage.rs  plant.rs  quantity.rs  unit_of_measure.rs
libs/common/types/: Cargo.toml  README.md
libs/common/types/src/: lib.rs
libs/common/utils/: Cargo.toml  README.md
libs/common/utils/src/: lib.rs
libs/frameworks/batch-framework/: Cargo.toml  README.md
libs/frameworks/batch-framework/src/: lib.rs
libs/frameworks/cqrs/: Cargo.toml  README.md
libs/frameworks/cqrs/src/: axum.rs  command.rs  context.rs  error.rs  event.rs  event_bus.rs  lib.rs  middleware.rs  prelude.rs  query.rs  registry.rs  testkit.rs  uow.rs
libs/frameworks/event-sourcing/: Cargo.toml  README.md
libs/frameworks/event-sourcing/src/: lib.rs
libs/frameworks/saga-orchestration/: Cargo.toml  README.md
libs/frameworks/saga-orchestration/src/: lib.rs
libs/infrastructure/auth/: Cargo.toml  README.md
libs/infrastructure/auth/src/: lib.rs
libs/infrastructure/messaging/: Cargo.toml  README.md
libs/infrastructure/messaging/src/: lib.rs
libs/infrastructure/observability/: Cargo.toml  README.md
libs/infrastructure/observability/src/: lib.rs
libs/infrastructure/persistence/: Cargo.toml  README.md
libs/infrastructure/persistence/src/: lib.rs
libs/integration/api-contracts/: Cargo.toml  README.md
libs/integration/api-contracts/src/: lib.rs
libs/integration/idoc-adapter/: Cargo.toml  README.md
libs/integration/idoc-adapter/src/: lib.rs
libs/master-data/: Cargo.toml  README.md
libs/master-data/business-partner/: Cargo.toml  README.md
libs/master-data/business-partner/src/: lib.rs
libs/master-data/cost-center/: Cargo.toml  README.md
libs/master-data/cost-center/src/: lib.rs
libs/master-data/material/: Cargo.toml  README.md
libs/master-data/material/src/: lib.rs
libs/master-data/organizational-units/: Cargo.toml  README.md
libs/master-data/organizational-units/proto/: domain.proto  events.proto
libs/master-data/organizational-units/src/: lib.rs
services/commercial/sales-service/: Cargo.toml  Dockerfile  README.md  build.rs
services/commercial/sales-service/config/: dev.toml  production.toml  staging.toml
services/commercial/sales-service/src/: main.rs
services/controlling-service/: Cargo.toml
services/controlling-service/src/domain/aggregates/: mod.rs
services/controlling-service/src/domain/entities/: mod.rs
services/controlling-service/src/domain/events/: mod.rs
services/controlling-service/src/domain/repositories/: mod.rs
services/controlling-service/src/domain/services/: mod.rs
services/controlling-service/src/domain/value_objects/: mod.rs
services/controlling-service/src/infrastructure/: mod.rs
services/finance/controlling-service/: Cargo.toml  README.md
services/finance/financial-service/: Cargo.toml  Dockerfile  README.md  build.rs  codecov.yaml  config.example.yaml
services/finance/financial-service/.github/workflows/: test.yml
services/finance/financial-service/api/: Cargo.toml  README.md
services/finance/financial-service/api/src/: error.rs  lib.rs  main.rs  server.rs
services/finance/financial-service/benches/: posting_benchmark.rs
services/finance/financial-service/config/: dev.toml  production.toml  staging.toml
services/finance/financial-service/migrations/: 001_create_gl_accounts.sql  001_create_tables.sql  002_create_journal_entries.sql  003_create_customers.sql  004_create_vendors.sql  005_create_fixed_assets.sql  006_create_bank_accounts.sql
services/finance/financial-service/src/: lib.rs  main.rs
services/finance/financial-service/src/application/: error.rs  mod.rs
services/finance/financial-service/src/domain/: entities.rs  error.rs  events.rs  mod.rs  repositories.rs  services.rs  value_objects.rs
services/finance/financial-service/src/infrastructure/: README.md  mod.rs
services/finance/financial-service/src/interfaces/: mod.rs
services/finance/financial-service/static/: index.html
services/finance/financial-service/tests/: Cargo.toml
services/finance/financial-service/tests/api/: mod.rs
services/finance/financial-service/tests/application/: application_service_tests.rs  command_handler_tests.rs  concurrency_tests.rs  idempotency_tests.rs  mod.rs
services/finance/financial-service/tests/domain/: fiscal_period_tests.rs  journal_entry_tests.rs  mod.rs  value_object_tests.rs
services/finance/financial-service/tests/e2e/: mod.rs
services/finance/financial-service/tests/fixtures/: mod.rs
services/finance/financial-service/tests/infrastructure/: mod.rs
services/finance/financial-service/tests/performance/: mod.rs
services/finance/financial-service/tests/security/: mod.rs
services/finance/treasury-service/: Cargo.toml  README.md
services/human-capital/hr-service/: Cargo.toml  README.md
services/infrastructure/api-gateway/: Cargo.toml  README.md
services/infrastructure/api-gateway/config/: gateway.yaml
services/infrastructure/api-gateway/src/: main.rs
services/infrastructure/api-gateway/tests/: integration_test.rs
services/infrastructure/mdg-service/: .dockerignore  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  build.rs  docker-compose.test.yaml  docker-compose.yaml
services/infrastructure/mdg-service/config/: mdg.yaml
services/infrastructure/mdg-service/migrations/: 001_create_tables.sql
services/infrastructure/mdg-service/proto/: events.proto  mdg.proto
services/infrastructure/mdg-service/src/: config.rs  error.rs  health.rs  main.rs
services/logistics/materials-service/: Cargo.toml  README.md
shared/api-contracts/: Cargo.toml
shared/api-contracts/src/: lib.rs
shared/testing-utils/: Cargo.toml
shared/testing-utils/src/: lib.rs
(+529 files in other folders)
