[package]
name = "controlling-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "KILLER controlling-service crate"
publish = false

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
sqlx = { workspace = true }
rdkafka = { workspace = true }
redis = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { workspace = true }
tokio-cron-scheduler = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-prometheus = { workspace = true }
api-contracts = { workspace = true, features = ["full"] }
domain-primitives = { workspace = true }
event-sourcing = { workspace = true }
cqrs = { workspace = true }
messaging = { workspace = true }
observability = { workspace = true }
auth = { workspace = true }
rules-engine = { workspace = true }
integration = { workspace = true }
batch-framework = { workspace = true }
testing-utils = { workspace = true }

