[package]
name = "testing-utils"
version.workspace = true
edition.workspace = true

license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
publish = false
[dependencies]
serde = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[features]
default = []
full = ["dep:serde", "dep:thiserror", "dep:tracing"]
