[package]
name = "killer-event-sourcing"
description = "事件溯源框架：Event Store, Aggregate, Repository 抽象"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# 异步运行时
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# 序列化
serde.workspace = true
serde_json.workspace = true

# 错误处理
thiserror.workspace = true

# UUID 和时间
uuid.workspace = true
chrono.workspace = true

# 可观测性
tracing.workspace = true

# 项目内部依赖
killer-types = { path = "../../common/types" }

[dev-dependencies]
tokio-test.workspace = true
proptest.workspace = true

[lints]
workspace = true
