[package]
name = "killer-auth"
description = "认证授权基础设施：JWT, OAuth2, RBAC"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# 异步运行时
tokio.workspace = true
async-trait.workspace = true

# JWT
jsonwebtoken.workspace = true

# 密码哈希
argon2.workspace = true
rand.workspace = true

# 序列化
serde.workspace = true
serde_json.workspace = true

# 错误处理
thiserror.workspace = true

# 时间
chrono.workspace = true

# 可观测性
tracing.workspace = true

# HTTP 客户端（OAuth2）
reqwest.workspace = true

# 项目内部依赖
killer-types = { path = "../../common/types" }

[dev-dependencies]
tokio-test.workspace = true

[lints]
workspace = true
