[package]
name = "killer-messaging"
description = "消息基础设施：Kafka Producer/Consumer, Event Bus 抽象"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# 异步运行时
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Kafka 客户端
rdkafka.workspace = true

# 序列化
serde.workspace = true
serde_json.workspace = true

# 错误处理
thiserror.workspace = true
anyhow.workspace = true

# 可观测性
tracing.workspace = true
metrics.workspace = true

# 项目内部依赖
killer-types = { path = "../../common/types" }

[dev-dependencies]
tokio-test.workspace = true
testcontainers.workspace = true
testcontainers-modules = { workspace = true, features = ["kafka"] }

[lints]
workspace = true
