[package]
name = "killer-api-contracts"
description = "API 契约定义：gRPC Service Trait, OpenAPI Spec, DTO"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# gRPC
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

# 序列化
serde.workspace = true
serde_json.workspace = true

# 验证
validator.workspace = true

# 类型派生
derive_more.workspace = true

# 项目内部依赖
killer-types = { path = "../../common/types" }
killer-domain-primitives = { path = "../../common/domain-primitives" }

[build-dependencies]
#tonic-build.workspace = true
tonic-prost-build = { workspace = true }

[lints]
workspace = true
