[package]
name = "killer-idoc-adapter"
description = "IDoc 适配器：IDoc 解析器, OData 客户端, SAP 集成"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# 异步运行时
tokio.workspace = true
async-trait.workspace = true

# HTTP 客户端
reqwest.workspace = true

# XML 解析
quick-xml = "0.37"

# 序列化
serde.workspace = true
serde_json.workspace = true

# 错误处理
thiserror.workspace = true
anyhow.workspace = true

# 可观测性
tracing.workspace = true

# 项目内部依赖
killer-types = { path = "../../common/types" }

[dev-dependencies]
tokio-test.workspace = true
wiremock.workspace = true

[lints]
workspace = true
