[package]
name = "killer-business-partner"
description = "业务伙伴主数据：Customer, Supplier, BusinessPartner 定义"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
# 仅用于条件编译占位（proto 文件生成尚未接入）
prost = []

[dependencies]
# 序列化
serde.workspace = true
serde_json.workspace = true

# 类型派生
derive_more.workspace = true
strum.workspace = true

# 验证
validator.workspace = true

# 时间/ID/错误
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true

# doctest 中用于构造 Money/Decimal
rust_decimal_macros.workspace = true

# 项目内部依赖
killer-types = { path = "../../common/types" }
killer-domain-primitives = { path = "../../common/domain-primitives" }

[dev-dependencies]
fake.workspace = true
proptest.workspace = true

[lints]
workspace = true
