[package]
name = "killer-cost-center"
description = "成本中心主数据：CostCenter, ProfitCenter 定义"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
prost = ["dep:prost", "dep:prost-types"]

[dependencies]
# 序列化
serde.workspace = true
serde_json.workspace = true

# 类型派生
derive_more.workspace = true
strum.workspace = true

# 验证
validator.workspace = true

# 时间
chrono.workspace = true

# 错误处理
thiserror = "1.0"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Protobuf & gRPC
prost = { version = "0.12", optional = true }
prost-types = { version = "0.12", optional = true }

# 项目内部依赖
killer-types = { path = "../../common/types" }
killer-domain-primitives = { path = "../../common/domain-primitives" }

[dev-dependencies]
fake.workspace = true

[lints]
workspace = true
