[package]
name = "killer-material"
description = "物料主数据：Material, MaterialPlantData, MaterialStorageData 定义"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# 序列化
serde.workspace = true
serde_json.workspace = true

# 类型派生
derive_more.workspace = true
strum.workspace = true

# 验证
validator.workspace = true

# 日期时间
chrono = { workspace = true, features = ["serde"] }

# 错误处理
thiserror.workspace = true

# 唯一标识
uuid.workspace = true

# 小数类型
rust_decimal.workspace = true

# 项目内部依赖
killer-types = { path = "../../common/types" }
killer-domain-primitives = { path = "../../common/domain-primitives" }
killer-organizational-units = { path = "../organizational-units" }

[dev-dependencies]
fake.workspace = true
proptest.workspace = true

[lints]
workspace = true
