[package]
name = "killer-organizational-units"
description = "组织单元主数据域 - 公司代码、工厂、库存地点等组织结构定义"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
prost = ["dep:prost", "dep:prost-types"]
serde = ["dep:serde", "dep:serde_json", "dep:serde_with", "dep:chrono"]
validator = ["validator/derive"]
default = ["serde", "validator"]

[dependencies]
# Workspace
killer-domain-primitives = { path = "../../common/domain-primitives" }
killer-types = { path = "../../common/types" }

# Serde & Validation
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
validator = { version = "0.16", features = ["derive"] }
serde_with = { version = "3.0", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

# Protobuf & gRPC
prost = { version = "0.12", optional = true }
prost-types = { version = "0.12", optional = true }
tonic = { version = "0.10", optional = true }
tonic-build = { version = "0.10", optional = true }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
derive_more = "0.99"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
serde_test = "1.0"


[lints]
workspace = true

[build-dependencies]
tonic-build = "0.10"
